src/objects/ADvendio__Visit_Report_Layout_View__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ADvendio__Show_Address_Agency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Address Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Address_Customer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Address Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Agency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Closing_Text__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Closing Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_CompanyInfo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show CompanyInfo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Contact_Agency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Contact Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Contact_Customer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Contact Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Customer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_FromUserName__c</fullName>
        <defaultValue>true</defaultValue>
        <description>User&apos;s name above signature</description>
        <label>Show FromUserName</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_From__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show From</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Line__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Logo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Other__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_ScannedSign__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show ScannedSign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Text__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_To__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Topic__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Topic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Visit_Report__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show top left &apos;Visit Report&apos;</description>
        <label>Show Visit Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Visit Report Layout View</label>
</CustomObject>